fix flexwrap

--- a/client/src/components/Logout.scss
+++ b/client/src/components/Logout.scss
@@ -1,11 +1,23 @@
-// .btn {
-//   margin: 5px;
-//   padding: 6px;
-//   color: #dcdcdc;
-//   border: solid rgba(63, 81, 181, 0.5) 1px;
-//   cursor: pointer;
-// }
+.container {
+  //   border: red solid 2px;
+  display: flex;
+  width: 240px;
+  margin: 7px;
+}
 
-// .btn-a {
-//   padding: 7px;
-// }
+.btn {
+  margin: 5px;
+  padding: 6px;
+  color: #dcdcdc;
+  border: 1px solid rgba(63, 81, 181, 0.5);
+  cursor: pointer;
+  background-color: #001029;
+  width: 100%;
+  height: 37px;
+  border-radius: 5px;
+}
+
+.btn-a {
+  text-decoration: none;
+  color: #dcdcdc;
+}
